--- a/src/componentes/Banner/style.css
+++ b/src/componentes/Banner/style.css
@@ -33,3 +33,23 @@
     font-size: 24px;
     font-weight: normal;
 }
+
+@media (max-width: 724px) {
+    .banner-texto{
+        position: absolute;
+        text-align: left;
+        top: 200px;
+        color: #f9f9f9;
+        padding-left: 20px;
+    }
+    
+    .banner-texto h2{
+        font-size: 32px;
+        font-weight: normal;
+    }
+    
+    .banner-texto p{
+        font-size: 18px;
+        font-weight: normal;
+    }
+}
