--- a/src/paginas/Home/style.css
+++ b/src/paginas/Home/style.css
@@ -27,6 +27,8 @@ h3{
     width: 20%;
     margin: 10px;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
 
 .card:hover{
@@ -36,4 +38,23 @@ h3{
 
 .img-shoes{
     width: 70%;
+}
+
+@media(max-width: 1200px) {
+    .card{
+        width: 400px;
+    }
+
+}
+
+@media (max-width: 724px) {
+    h3{
+        margin-top: 50px;
+        font-size: 24px;
+    }
+    
+    .sub-titulo{
+        font-size: 14px;
+        margin-bottom: 50px;
+    }
 }
